--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
                                 <div class="card-palette">
                                     {% for color in colors: %}
                                         {% if color.image_id == image.id: %}
-                                        <div class="color" style="background-color: rgb{{ color.rgb_color }}; color: rgb{{ color.rgb_color }}">
+                                        <div class="color" id="color" onclick="copyColor()" style="background-color: rgb{{ color.rgb_color }}; color: rgb{{ color.rgb_color }}">
                                         </div>
                                         {% endif %}
                                     {% endfor %}
