--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -58,6 +58,7 @@ body {
 .card-palette {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     flex-wrap: wrap;
     margin-bottom: 20%;
 }
@@ -65,10 +66,14 @@ body {
 
 .color {
     margin: 2px;
-    border-radius: 50%;
+    border-radius: 30%;
     width: 20px;
     height: 20px;
+    transition: all .3s ease-out;
+}
 
+.color:hover {
+    transform: translate(0, -5px);
 }
 
 .card {
@@ -84,7 +89,6 @@ body {
     height: 100%;
     border-radius: 5%;
 }
-
 
 /* CARD MEDIA QUERIES */
 @media only screen and (max-width: 992px) {
