--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -60,7 +60,7 @@ body {
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
-    margin-bottom: 10%;
+    margin-bottom: 5%;
 }
 
 
@@ -73,7 +73,16 @@ body {
 }
 
 .color:hover {
-    transform: translate(0, -5px);
+    /* transform: translate(0, -2.5px); */
+    opacity: 0.5;
+}
+
+.color:active {
+    transform: rotate(360deg);
+}
+
+.copied {
+    font-size: 0.75em;
 }
 
 .card {
@@ -96,10 +105,6 @@ body {
         height: 450px;
     }
 
-    .card-palette {
-        margin-bottom: 0;
-    }
-
     .color {
         width: 50px;
         height: 50px;
@@ -112,9 +117,6 @@ body {
         height: 300px;
     }
 
-    .card-palette {
-        margin-bottom: 5%;
-    }
 
     .color {
         width: 30px;
