--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -44,6 +44,7 @@ body {
     transform: rotateY(180deg);
     border: 1px solid grey;
     border-radius: 5%;
+    background-color: #d9d9d9;
 }
 
 .card-body {
