Add paintbrush icon to header

--- a/templates/header.html
+++ b/templates/header.html
@@ -7,4 +7,5 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet">
+    <link rel="icon" href="{{ url_for('static', filename='assets/paint-board-and-brush.png') }}">
 {% endblock %}
